--- a/config/x86_64_kvm/other.config
+++ b/config/x86_64_kvm/other.config
@@ -26,14 +26,17 @@ CONFIG_KERNEL_PAGE_POOL=y
 #
 # Base system
 #
+CONFIG_PACKAGE_attendedsysupgrade-common=y
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_qosmate=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
+CONFIG_PACKAGE_rpcd-mod-rpcsys=y
 CONFIG_PACKAGE_rpcd-mod-ucode=y
 CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_wifi-scripts=y
@@ -171,6 +174,7 @@ CONFIG_SQLITE3_RTREE=y
 #
 # Filesystem
 #
+CONFIG_PACKAGE_libacl=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libfuse=y
 CONFIG_PACKAGE_libsysfs=y
@@ -178,6 +182,7 @@ CONFIG_PACKAGE_libsysfs=y
 #
 # Firewall
 #
+CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libiptext=y
 CONFIG_PACKAGE_libiptext-nft=y
@@ -269,6 +274,7 @@ CONFIG_PACKAGE_libimobiledevice-glue=y
 CONFIG_PACKAGE_libplist=y
 CONFIG_PACKAGE_libusbmuxd=y
 # end of libimobiledevice
+CONFIG_PACKAGE_bind-libs=y
 CONFIG_PACKAGE_boost=y
 #
 # Select Boost Options
@@ -328,9 +334,13 @@ CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffi=y
 CONFIG_PACKAGE_libgcrypt=y
+CONFIG_PACKAGE_libgd=y
 CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgpg-error=y
+CONFIG_PACKAGE_libinotifytools=y
+CONFIG_PACKAGE_libiperf3=y
 CONFIG_PACKAGE_libiwinfo=y
+CONFIG_PACKAGE_libjpeg-turbo=y
 CONFIG_PACKAGE_libkmod=y
 CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua=y
@@ -339,17 +349,23 @@ CONFIG_PACKAGE_liblucihttp=y
 CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblucihttp-ucode=y
 CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmagic=y
 CONFIG_PACKAGE_libmbim=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libneon=y
 CONFIG_PACKAGE_libnghttp2=y
+CONFIG_PACKAGE_libnl-core=y
+CONFIG_PACKAGE_libnl-genl=y
+CONFIG_PACKAGE_libnl-route=y
 CONFIG_PACKAGE_libparted=y
 CONFIG_PACKAGE_libpci=y
 CONFIG_PACKAGE_libpcre2=y
 CONFIG_PCRE2_JIT_ENABLED=y
 CONFIG_PACKAGE_libpcre2-16=y
+CONFIG_PACKAGE_libpng=y
 CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libqmi=y
 #
@@ -378,9 +394,12 @@ CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libudev-zero=y
 CONFIG_PACKAGE_libudns=y
+CONFIG_PACKAGE_liburcu=y
 CONFIG_PACKAGE_liburing=y
 CONFIG_PACKAGE_libusb-1.0=y
+CONFIG_PACKAGE_libusb-compat=y
 CONFIG_PACKAGE_libuv=y
+CONFIG_PACKAGE_libwebp=y
 CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
