--- a/config/x86_64_kvm/OpenWrt-K/extpackages.config
+++ b/config/x86_64_kvm/OpenWrt-K/extpackages.config
@@ -126,3 +126,31 @@ EXT_PACKAGES_NAME[32]="libdouble-conversion"
 EXT_PACKAGES_PATH[32]="libs/libdouble-conversion"
 EXT_PACKAGES_REPOSITORIE[32]="https://github.com/immortalwrt/packages"
 EXT_PACKAGES_BRANCH[32]=""
+EXT_PACKAGES_NAME[33]="luci-app-mosdns"
+EXT_PACKAGES_PATH[33]="luci-app-mosdns"
+EXT_PACKAGES_REPOSITORIE[33]="https://github.com/sbwml/luci-app-mosdns"
+EXT_PACKAGES_BRANCH[33]="v5"
+EXT_PACKAGES_NAME[34]="mosdns"
+EXT_PACKAGES_PATH[34]="mosdns"
+EXT_PACKAGES_REPOSITORIE[34]="https://github.com/sbwml/luci-app-mosdns"
+EXT_PACKAGES_BRANCH[34]="v5"
+EXT_PACKAGES_NAME[35]="qosmate"
+EXT_PACKAGES_PATH[35]=""
+EXT_PACKAGES_REPOSITORIE[35]="https://github.com/hudra0/qosmate"
+EXT_PACKAGES_BRANCH[35]="main"
+EXT_PACKAGES_NAME[36]="luci-app-qosmate"
+EXT_PACKAGES_PATH[36]=""
+EXT_PACKAGES_REPOSITORIE[36]="https://github.com/hudra0/luci-app-qosmate"
+EXT_PACKAGES_BRANCH[36]="main"
+EXT_PACKAGES_NAME[37]="msd_lite"
+EXT_PACKAGES_PATH[37]="msd_lite"
+EXT_PACKAGES_REPOSITORIE[37]="https://github.com/zfdx123/msd_lite"
+EXT_PACKAGES_BRANCH[37]="master"
+EXT_PACKAGES_NAME[38]="luci-app-msd_lite"
+EXT_PACKAGES_PATH[38]="luci-app-msd_lite"
+EXT_PACKAGES_REPOSITORIE[38]="https://github.com/zfdx123/msd_lite"
+EXT_PACKAGES_BRANCH[38]="master"
+EXT_PACKAGES_NAME[39]="v2dat"
+EXT_PACKAGES_PATH[39]="v2dat"
+EXT_PACKAGES_REPOSITORIE[39]="https://github.com/sbwml/luci-app-mosdns"
+EXT_PACKAGES_BRANCH[39]="v5"
