--- a/config/x86_64_kvm/image.config
+++ b/config/x86_64_kvm/image.config
@@ -7,11 +7,15 @@
 #
 # Root filesystem images
 #
+CONFIG_TARGET_ROOTFS_EXT4FS=n
+CONFIG_GRUB_IMAGES=n
 CONFIG_GRUB_TIMEOUT="0"
+CONFIG_GRUB_TITLE="HoRouter"
 CONFIG_ISO_IMAGES=y
 CONFIG_VMDK_IMAGES=y
 #
 # Image Options
 #
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+CONFIG_TARGET_KERNEL_PARTSIZE=32
+CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 # end of Target Images
