--- a/config/x86_64_kvm/network.config
+++ b/config/x86_64_kvm/network.config
@@ -2,35 +2,17 @@
 # Network
 #
 #
-# Cloud Manager
+# BitTorrent
 #
-CONFIG_PACKAGE_rclone-ng=y
-CONFIG_PACKAGE_rclone-webui-react=y
-# end of Cloud Manager
-#
-# Download Manager
-#
-CONFIG_PACKAGE_ariang=y
-# end of Download Manager
+CONFIG_PACKAGE_qbittorrent-enhanced-edition=y
+# end of BitTorrent
 #
 # File Transfer
 #
-CONFIG_PACKAGE_aria2=y
-#
-# Aria2 Configuration
-#
-CONFIG_ARIA2_OPENSSL=y
-CONFIG_ARIA2_LIBXML2=y
-CONFIG_ARIA2_BITTORRENT=y
-CONFIG_ARIA2_METALINK=y
-CONFIG_ARIA2_SFTP=y
-CONFIG_ARIA2_ASYNC_DNS=y
-CONFIG_ARIA2_COOKIE=y
-CONFIG_ARIA2_WEBSOCKET=y
-# end of Aria2 Configuration
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_rclone=y
-CONFIG_PACKAGE_rclone-config=y
+CONFIG_PACKAGE_rsync=y
+CONFIG_RSYNC_xattr=y
+CONFIG_RSYNC_acl=y
 CONFIG_PACKAGE_vsftpd-tls=y
 CONFIG_PACKAGE_wget-ssl=y
 # end of File Transfer
@@ -38,6 +20,7 @@ CONFIG_PACKAGE_wget-ssl=y
 # Firewall
 #
 CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
 CONFIG_PACKAGE_iptables-nft=y
 CONFIG_PACKAGE_miniupnpd-nftables=y
 CONFIG_PACKAGE_xtables-nft=y
@@ -46,14 +29,12 @@ CONFIG_PACKAGE_xtables-nft=y
 # IP Addresses and Names
 #
 CONFIG_PACKAGE_avahi-dbus-daemon=y
-CONFIG_PACKAGE_chinadns-ng=y
+CONFIG_PACKAGE_bind-dig=y
+CONFIG_BIND_ENABLE_DOH=y
 CONFIG_PACKAGE_ddns-scripts=y
 CONFIG_PACKAGE_ddns-scripts-cloudflare=y
-CONFIG_PACKAGE_ddns-scripts-dnspod=y
 CONFIG_PACKAGE_ddns-scripts-services=y
-CONFIG_PACKAGE_ddns-scripts_aliyun=y
-CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_dns2tcp=y
+CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 CONFIG_PACKAGE_wsdd2=y
@@ -67,6 +48,8 @@ CONFIG_PACKAGE_p910nd=y
 # Routing and Redirection
 #
 CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_tc-full=y
+CONFIG_PACKAGE_tc-tiny=y
 # end of Routing and Redirection
 #
 # SSH
@@ -90,48 +73,48 @@ CONFIG_PACKAGE_uqmi=y
 #
 # Web Servers/Proxies
 #
-CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_cgi-io=y
-CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_homebox=y
-CONFIG_PACKAGE_microsocks=y
-CONFIG_PACKAGE_naiveproxy=y
-CONFIG_PACKAGE_shadowsocks-libev-config=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=n
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=n
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
-CONFIG_PACKAGE_sing-box=y
-#
-# Customizing build tags
-#
-CONFIG_SING_BOX_WITH_CLASH_API=y
-CONFIG_SING_BOX_WITH_DHCP=y
-CONFIG_SING_BOX_WITH_ECH=y
-CONFIG_SING_BOX_WITH_QUIC=y
-CONFIG_SING_BOX_WITH_UTLS=y
-CONFIG_SING_BOX_WITH_WIREGUARD=y
-# end of Customizing build tags
-CONFIG_PACKAGE_trojan-go=y
-CONFIG_PACKAGE_tuic-client=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
-CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_xray-plugin=y
 # end of Web Servers/Proxies
+#
+# WirelessAPD
+#
+CONFIG_PACKAGE_hostapd-common=y
+CONFIG_WPA_MSG_MIN_PRIORITY=3
+CONFIG_DRIVER_11AC_SUPPORT=y
+CONFIG_WPA_MBO_SUPPORT=y
+# end of WirelessAPD
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_chat=y
 CONFIG_PACKAGE_cifsmount=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_ethtool-full=y
-CONFIG_PACKAGE_hysteria=y
-CONFIG_PACKAGE_ipset=y
-CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_homebox=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3-ssl=m
 CONFIG_PACKAGE_iputils-arping=y
+CONFIG_PACKAGE_iw=y
+CONFIG_PACKAGE_keepalived=y
+#
+# Configuration
+#
+CONFIG_KEEPALIVED_SHA1=y
+CONFIG_KEEPALIVED_LVS=y
+CONFIG_KEEPALIVED_LVS_SYNCD=y
+CONFIG_KEEPALIVED_LVS_64BIT_STATS=y
+CONFIG_KEEPALIVED_FWMARK=y
+CONFIG_KEEPALIVED_VRRP=y
+CONFIG_KEEPALIVED_IPTABLES=y
+CONFIG_KEEPALIVED_IP6TABLES=y
+CONFIG_KEEPALIVED_NFTABLES=y
+CONFIG_KEEPALIVED_VRRP_AUTH=y
+CONFIG_KEEPALIVED_CHECKSUM_COMPAT=y
+CONFIG_KEEPALIVED_ROUTES=y
+CONFIG_KEEPALIVED_LINKBEAT=y
+# end of Configuration
+CONFIG_PACKAGE_keepalived-sync=y
+CONFIG_PACKAGE_krb5-libs=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_modemmanager=y
 #
@@ -141,8 +124,20 @@ CONFIG_MODEMMANAGER_WITH_MBIM=y
 CONFIG_MODEMMANAGER_WITH_QMI=y
 CONFIG_MODEMMANAGER_WITH_QRTR=y
 # end of Configuration
+CONFIG_PACKAGE_msd_lite=y
 CONFIG_PACKAGE_netperf=y
 CONFIG_PACKAGE_nlbwmon=y
+CONFIG_PACKAGE_nut=y
+CONFIG_NUT_DRIVER_USB=y
+CONFIG_NUT_DRIVER_SERIAL=y
+CONFIG_NUT_DRIVER_NEON=y
+CONFIG_PACKAGE_nut-common=y
+CONFIG_PACKAGE_nut-server=y
+CONFIG_PACKAGE_nut-upsc=y
+CONFIG_PACKAGE_nut-upscmd=y
+CONFIG_PACKAGE_nut-upsmon=y
+CONFIG_PACKAGE_nut-web-cgi=y
+CONFIG_PACKAGE_omcproxy=y
 CONFIG_PACKAGE_proto-bonding=y
 CONFIG_PACKAGE_samba4-admin=y
 CONFIG_PACKAGE_samba4-client=y
@@ -153,12 +148,11 @@ CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_VFS=y
 CONFIG_PACKAGE_samba4-utils=y
-CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_socat=y
 CONFIG_SOCAT_SSL=y
+CONFIG_PACKAGE_speedtest-cli=y
 CONFIG_PACKAGE_tcping=y
-CONFIG_PACKAGE_trojan-plus=y
+CONFIG_PACKAGE_vlmcsd=y
 CONFIG_PACKAGE_wwan=y
-CONFIG_PACKAGE_xray-core=y
 # end of Network
