--- a/config/x86_64_kvm/utilities.config
+++ b/config/x86_64_kvm/utilities.config
@@ -21,6 +21,11 @@ CONFIG_PARTED_READLINE=y
 # end of Configuration
 # end of Disc
 #
+# Editors
+#
+CONFIG_PACKAGE_nano-full=y
+# end of Editors
+#
 # Filesystem
 #
 CONFIG_PACKAGE_attr=y
@@ -45,6 +50,12 @@ CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_ttyd=y
 # end of Terminal
 #
+# Virtualization
+#
+CONFIG_PACKAGE_qemu-ga=y
+CONFIG_PACKAGE_virtio-console-helper=y
+# end of Virtualization
+#
 # libimobiledevice
 #
 CONFIG_PACKAGE_libimobiledevice-utils=y
@@ -60,9 +71,13 @@ CONFIG_COREMARK_NUMBER_OF_THREADS=128
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_coreutils-timeout=y
 CONFIG_PACKAGE_dbus=y
+CONFIG_PACKAGE_inotifywait=y
+CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_jq=y
 CONFIG_PACKAGE_lm-sensors=y
+CONFIG_PACKAGE_netspeedtest=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_pciids=y
 CONFIG_PACKAGE_pciutils=y
@@ -72,5 +87,7 @@ CONFIG_PACKAGE_smartmontools-drivedb=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_usb-modeswitch=y
+CONFIG_PACKAGE_usbids=y
 CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_v2dat=y
 # end of Utilities
