更新luci配置，替换luci-app-wol为luci-app-wolplus，并添加相关的扩展包配置。同时，修改默认IP地址和Golang版本。

--- a/config/x86_64_kvm/OpenWrt-K/extpackages.config
+++ b/config/x86_64_kvm/OpenWrt-K/extpackages.config
@@ -154,3 +154,7 @@ EXT_PACKAGES_NAME[39]="v2dat"
 EXT_PACKAGES_PATH[39]="v2dat"
 EXT_PACKAGES_REPOSITORIE[39]="https://github.com/sbwml/luci-app-mosdns"
 EXT_PACKAGES_BRANCH[39]="v5"
+EXT_PACKAGES_NAME[40]="luci-app-wolplus"
+EXT_PACKAGES_PATH[40]=""
+EXT_PACKAGES_REPOSITORIE[40]="https://github.com/animegasan/luci-app-wolplus"
+EXT_PACKAGES_BRANCH[40]="main"
